Swap out unnessesary factories for providers and add  more tests